update Ticketing html

--- a/src/pages/Ticketing/TicketingHome.html
+++ b/src/pages/Ticketing/TicketingHome.html
@@ -8,7 +8,7 @@
 </section>
 <section id="packageContainer" class="toggleBox clientView" style="display:none">
   <header class="grid-x toggleTitle">
-    <h2 class="cell auto">Package(s)</h2><a href="https://portal.bizcube.com.sg/1.pdf" class="cell auto">Maintainance & Support SLA</a><a class="cell auto" href="https://portal.bizcube.com.sg/1.pdf">Software Assurance SLA</a><a class="cell auto" href="https://portal.bizcube.com.sg/1.pdf">Software Assurance SLA</a>
+    <h2 class="cell auto">Package(s)</h2><a href="https://portal.bizcube.com.sg/1.pdf" class="cell auto">Maintainance & Support SLA</a><a class="cell auto" href="https://portal.bizcube.com.sg/1.pdf">Software Assurance</a><a class="cell auto" href="https://portal.bizcube.com.sg/1.pdf">Software Assurance SLA</a>
   </header>
   <div id="packageFilter" class="packageFilter tabBoxContainer">
     <button class="button button3 tabBoxButton" data-target="packageFilterForm" ><i class="icon"><img src="{{root}}assets/img/icon-light-filter.png" alt="icon"/></i>Filter</button>
@@ -106,7 +106,7 @@
           <div class="grid-x card-divider">
             <div align="center" class="cell auto">
               <img src="../assets/img/user-add.png" width="100" height="100"> <br>
-              Add New Person
+              Add New Staff
             </div>
           </div>
         </div>
