update table css

--- a/src/pages/Ticketing/TicketingHome.html
+++ b/src/pages/Ticketing/TicketingHome.html
@@ -189,8 +189,8 @@
     <table class="caseTable">
       <thead>
         <tr>
-          <th colspan="2">Subject</th>
-          <th>Case ID#</th>
+          <th colspan="2">Case ID#</th>
+          <th >Subject</th>
           <th>Package Type</th>
           <th>Type</th>
           <th>Organisation</th>
