--- a/src/pages/Ticketing/TicketingHome.html
+++ b/src/pages/Ticketing/TicketingHome.html
@@ -8,7 +8,7 @@
 </section>
 <section id="packageContainer" class="toggleBox clientView" style="display:none">
   <header class="grid-x toggleTitle">
-    <h2 class="cell auto">Package(s)</h2><a href="https://portal.bizcube.com.sg/BizCubeSoftwareMaintenance_Support.pdf" class="cell auto">Maintainance & Support SLA</a><a class="cell auto" href="https://portal.bizcube.com.sg/BizCubeSoftwareAssurance.pdf">Software Assurance SLA</a><a class="cell auto" href="https://portal.bizcube.com.sg/1.pdf">Assurance Plus SLA</a>
+    <h2 class="cell auto">Package(s)</h2><a href="https://portal.bizcube.com.sg/BizCubeSoftwareMaintenance_Support.pdf" class="cell auto">Maintainance & Support SLA</a><a class="cell auto" href="https://portal.bizcube.com.sg/BizCubeSoftwareAssurance.pdf">Software Assurance SLA</a><a class="cell auto" href="https://portal.bizcube.com.sg/BizCubeAssurancePlus.pdf">Assurance Plus SLA</a>
   </header>
   <div id="packageFilter" class="packageFilter tabBoxContainer">
     <button class="button button3 tabBoxButton" data-target="packageFilterForm" ><i class="icon"><img src="{{root}}assets/img/icon-light-filter.png" alt="icon"/></i>Filter</button>
@@ -191,7 +191,7 @@
         <tr>
           <th colspan="2">Case ID#</th>
           <th >Subject</th>
-          <th>Package Type</th>
+          <th>Product</th>
           <th>Type</th>
           <th>Organisation</th>
           <th>Created Date</th>
