--- a/src/pages/Ticketing/case.html
+++ b/src/pages/Ticketing/case.html
@@ -112,7 +112,7 @@
   </section>
   <section id="involvement">
     <header class="grid-x">
-      <h2 class="cell auto">Involvement</h2>
+      <h2 class="cell auto">Assigned Engineer(s)</h2>
       <button type="button" style="display:none" class="buttonType2 buttonType2Add cell medium-3 text-right teamLeadControl"  data-open="involvementForm">Add Involvement</button>
     </header>
     <div class="threadContainer" id="taskThread">
@@ -176,7 +176,7 @@
       </div>
     </div>
     <footer class="grid-x grid-margin-x">
-      <button type="button" id="submit" data-close class="btn cell small-12 medium-4 medium-offset-4">Submit</button>
+      <button type="button" id="submit" class="btn cell small-12 medium-4 medium-offset-4">Submit</button>
     </footer>
   </form>
   <form id="activityForm" class="reveal lightBg" data-reveal>
@@ -226,7 +226,7 @@
       </div>
     </div>
     <footer class="grid-x grid-margin-x">
-      <button type="button" id="submit" data-close class="btn cell small-12 medium-4 medium-offset-4">Submit</button>
+      <button type="button" id="submit"  class="btn cell small-12 medium-4 medium-offset-4">Submit</button>
     </footer>
   </form>
   <form id="reviewForm" class="reveal lightBg" data-reveal>
