--- a/src/pages/Ticketing/TicketingHome.html
+++ b/src/pages/Ticketing/TicketingHome.html
@@ -8,7 +8,7 @@
 </section>
 <section id="packageContainer" class="toggleBox clientView" style="display:none">
   <header class="grid-x toggleTitle">
-    <h2 class="cell auto">Package(s)</h2><a href="https://portal.bizcube.com.sg/BizCubeSoftwareMaintenance_Support.pdf" class="cell auto">Maintainance & Support SLA</a><a class="cell auto" href="https://portal.bizcube.com.sg/BizCubeSoftwareAssurance.pdf">Software Assurance SLA</a><a class="cell auto" href="https://portal.bizcube.com.sg/BizCubeAssurancePlus.pdf">Assurance Plus SLA</a>
+    <h2 class="cell auto">Maintainance Package(s)</h2><a href="https://portal.bizcube.com.sg/BizCubeSoftwareMaintenance_Support.pdf" class="cell auto" style="display:none">Maintainance & Support SLA</a><a class="cell auto" href="https://portal.bizcube.com.sg/BizCubeSoftwareAssurance.pdf" style="display:none">Software Assurance SLA</a><a class="cell auto" href="https://portal.bizcube.com.sg/BizCubeAssurancePlus.pdf" style="display:none">Assurance Plus SLA</a>
   </header>
   <div id="packageFilter" class="packageFilter tabBoxContainer">
     <button class="button button3 tabBoxButton" data-target="packageFilterForm" ><i class="icon"><img src="{{root}}assets/img/icon-light-filter.png" alt="icon"/></i>Filter</button>
@@ -137,7 +137,7 @@
           <label>
             Status
             <select id="status" name="status">
-              <option value="">-- Please Select --</option>
+              <option value="">-- Please All --</option>
               <option value="Open" selected>Open</option>
               <option value="Closed">Closed</option>
             </select>
@@ -154,7 +154,7 @@
           <label>
             Category
             <select id="category" name="category">
-              <option value="">-- Please Select --</option>
+              <option value="">-- Please All --</option>
               <option value="Support Request">Support Request</option>
               <option value="Bugs">Bugs</option>
               <option value="CR">Change Request</option>
@@ -413,7 +413,7 @@
     </div>
   </div>
   <footer class="grid-x grid-margin-x">
-    <button type="button" id="submit" data-close class="cell small-12 medium-offset-4 medium-4 newCaseSubmitButton">Submit</button>
+    <button type="button" id="submit"  class="cell small-12 medium-offset-4 medium-4 newCaseSubmitButton">Submit</button>
   </footer>
 </form>
 <form id="packageAddForm" class="reveal lightBg" data-reveal >
@@ -539,7 +539,8 @@
     <div class="cell small-12 medium-6">
       <label>
       Country
-      <input type="text" id="country" name="country"/>
+      <select id="country" name="country">
+      </select>
       </label>
     </div>
     <div class="cell small-12 medium-6">
@@ -549,7 +550,7 @@
       </label>
     </div>
   </div>
-  <div class="grid-x grid-padding-x">
+  <div class="grid-x grid-padding-x" style="display:none">
     <div class="cell small-12 medium-6">
       <label>
       City
@@ -641,7 +642,7 @@
     </div>
   </div>
   <footer class="grid-x grid-margin-x">
-    <button type="button" id="submit" data-close class="cell small-12 medium-offset-4 medium-4 newPackagaSubmitButton">Submit</button>
+    <button type="button" id="submit"  class="cell small-12 medium-offset-4 medium-4 newPackagaSubmitButton">Submit</button>
   </footer>
 </form>
 <form id="newPersonForm" class="reveal lightBg" data-reveal >
@@ -705,6 +706,6 @@
     </div>
   </div>
   <footer class="grid-x grid-margin-x">
-    <button type="button" id="submit" data-close class="cell small-12 medium-offset-4 medium-4 newPackagaSubmitButton">Submit</button>
+    <button type="button" id="submit"  class="cell small-12 medium-offset-4 medium-4 newPackagaSubmitButton">Submit</button>
   </footer>
 </form>
