--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -5,7 +5,7 @@ layout: noframe
 <section>
   <form id="loginComponent">
 		<header>
-			<h3 class="text-center">BizCuBe FAST System</h3>
+			<h3 class="text-center">BizCube FAST System</h3>
 		</header>
 			<div>
 				<label>
