--- a/src/pages/Ticketing/EmailRetrieval.html
+++ b/src/pages/Ticketing/EmailRetrieval.html
@@ -9,7 +9,13 @@
   <div class="grid-x grid-padding-x">
     <label>Please enter your Email address to start the account recovery process.</label>
     <input type="text" name="EmailAddressOrNric" id="EmailAddressOrNric" />
+  </div>
+<div class="grid-x grid-padding-x">
+  <div class="cell small-2 medium-2">
+    <button type="button" id="back" >Back</button>
+  </div>
+  <div class="cell small-2 medium-2 orgCell">
     <button type="button" id="submit" >Submit</button>
   </div>
-
+</div>
 </form>
