--- a/src/pages/Ticketing/TicketingHome.html
+++ b/src/pages/Ticketing/TicketingHome.html
@@ -137,7 +137,7 @@
           <label>
             Status
             <select id="status" name="status">
-              <option value="">-- Please All --</option>
+              <option value="">-- All --</option>
               <option value="Open" selected>Open</option>
               <option value="Closed">Closed</option>
             </select>
@@ -154,7 +154,7 @@
           <label>
             Category
             <select id="category" name="category">
-              <option value="">-- Please All --</option>
+              <option value="">-- All --</option>
               <option value="Support Request">Support Request</option>
               <option value="Bugs">Bugs</option>
               <option value="CR">Change Request</option>
