--- a/src/pages/Ticketing/TicketingHome.html
+++ b/src/pages/Ticketing/TicketingHome.html
@@ -180,6 +180,23 @@
           </div>
         </fieldset>
       </div>
+      <div class="grid-x grid-padding-x">
+        <div class="cell small-12 medium-6">
+          <label>Product
+          <input type="text" id="product" name="product" />
+          </label>
+        </div>
+        <div class="cell small-12 medium-6">
+          <label>
+            Involvement
+            <select id="person" name="person">
+            <option value="">-- Select Staff --</option>
+            <option value="1">Admin</option>
+            <option value="6">Li Feng</option>
+            </select>
+          </label>
+        </div>
+      </div>
       <footer class="grid-x grid-margin-x">
         <button type="button" class="cell small-12 medium-offset-4 medium-4 button2 tabBoxButtonSubmit">Filter</button>
       </footer>
