--- a/src/pages/Ticketing/case.html
+++ b/src/pages/Ticketing/case.html
@@ -287,24 +287,38 @@
         </div>
       </div>
     </div>
-    <div class="grid-x grid-padding-x" >
-      <div class="cell small-12 medium-6">
-        <div class="cell">
-          <label>
-          Chargeable Man-hour(s)
-          <input type="text" id="manHours" name="manHours" />
-          </label>
-        </div>
+      <div class="grid-x grid-padding-x">
+          <div class="cell small-12 medium-6">
+              <div class="cell">
+                  <label>
+                      Priority Level<span style="color:red">*</span>
+                      <select id="PriorityLevel" name="PriorityLevel">
+                          <option value="">-- Please Select --</option>
+                          <option value="Critical">Critical</option>
+                          <option value="Urgent">Urgent</option>
+                          <option value="Normal">Normal</option>
+                      </select>
+                  </label>
+              </div>
+
+          </div>
+          <div class="cell small-12 medium-6">
+              <div class="cell">
+                  <label>
+                      Chargeable Man-hour(s)
+                      <input type="text" id="manHours" name="manHours" />
+                  </label>
+              </div>
+          </div>
+          <div class="cell small-12 medium-6" style="display:none">
+              <div class="cell">
+                  <label>
+                      Actual Man-hour(s)
+                      <input type="text" id="actualManHours" name="actualManHours" />
+                  </label>
+              </div>
+          </div>
       </div>
-      <div class="cell small-12 medium-6" style="display:none">
-        <div class="cell">
-          <label>
-          Actual Man-hour(s)
-          <input type="text" id="actualManHours" name="actualManHours" />
-          </label>
-        </div>
-      </div>
-    </div>
     <footer class="grid-x grid-margin-x">
       <button type="button" id="submit" data-close class="btn cell small-12 medium-4 medium-offset-4">Submit</button>
     </footer>
