--- a/src/pages/Ticketing/case.html
+++ b/src/pages/Ticketing/case.html
@@ -320,7 +320,7 @@
           </div>
       </div>
     <footer class="grid-x grid-margin-x">
-      <button type="button" id="submit" data-close class="btn cell small-12 medium-4 medium-offset-4">Submit</button>
+      <button type="button" id="submit" class="btn cell small-12 medium-4 medium-offset-4">Submit</button>
     </footer>
   </form>
 </div>
