--- a/src/pages/Ticketing/case.html
+++ b/src/pages/Ticketing/case.html
@@ -12,6 +12,16 @@
     </header>
     <div class="grid-container toggleContent fluid">
       <div class="grid-x grid-margin-x">
+    <div class="cell  small-6 medium-6 ">
+        <b>Case ID#</b>
+        <span class="CaseID"></span>
+      <button id="Print">Print</button>
+    </div>
+    <!-- <div class="cell  small-6 medium-6 ">
+        <button id="Print">Print</button>
+    </div> -->
+    </div>
+      <div class="grid-x grid-margin-x">
         <div class="cell  small-12 medium-6 ">
           <b>Organisation</b>
           <span class="organisation">
