--- a/src/pages/Ticketing/case.html
+++ b/src/pages/Ticketing/case.html
@@ -229,12 +229,20 @@
     <div class="grid-x grid-padding-x">
       <div class="cell">
         <label>
-        Package
+        Package<span style="color:red">*</span>
         <select id="packageID" name="packageID">
           <option value="">-- Please Select --</option>
         </select>
         </label>
       </div>
+    </div>
+    <div class="grid-x grid-padding-x">
+             <div class="cell">
+                 <label>
+                     Charge Hour(s) <span style="color:red">*</span>
+                     <input type="text" id="actualManHours" name="actualManHours" />
+                 </label>
+             </div>
     </div>
     <footer class="grid-x grid-margin-x">
       <button type="button" id="submit"  class="btn cell small-12 medium-4 medium-offset-4">Submit</button>
