--- a/src/pages/Ticketing/case.html
+++ b/src/pages/Ticketing/case.html
@@ -108,7 +108,7 @@
       </div>
       <div class="grid-x grid-margin-x">
         <div class="cell  small-12 medium-6 ">
-          <b>Chargeable Man-hour(s)</b>
+          <b>Charged Man-Hour(s)</b>
           <span class="manHours">
           </span>
         </div>
