--- a/src/pages/Ticketing/case.html
+++ b/src/pages/Ticketing/case.html
@@ -142,7 +142,7 @@
   <section id="activityLog">
     <header class="grid-x">
       <h2 class="cell auto">Case History</h2>
-      <button id="AddNewAttachment" type="button" class="buttonType2 buttonType2Add cell medium-3 text-right" onclick="AddNewAttactment();return false;">Add Case Attachments</button>
+      <button id="AddNewAttachment" type="button" class="buttonType2 buttonType2Add cell medium-3 text-right" onclick="AddNewAttactment();return false;">Add/View Case Attachments</button>
       <button id="AddNewActivity" type="button" class="buttonType2 buttonType2Add cell medium-3 text-right"  data-open="activityForm">Add Case Remarks</button>
     </header>
     <div class="threadContainer" id="logThread">
