--- a/src/pages/Ticketing/case.html
+++ b/src/pages/Ticketing/case.html
@@ -1,6 +1,6 @@
 <div id="caseContainer" class="contentContainer">
   <div class="boxContent">
-    <a class="button buttonType2 left buttonType2Back" href="#" onclick="window.history.back()">Back to Case Listing</a>
+    <a class="button buttonType2 left buttonType2Back" href="./TicketingHome.html">Back to Case Listing</a>
   </div>
   <header class="titleMain">
     <h1 class="caseTitle">
