--- a/src/pages/Ticketing/TicketingHome.html
+++ b/src/pages/Ticketing/TicketingHome.html
@@ -201,7 +201,8 @@
       </div>
 
       <footer class="grid-x grid-margin-x">
-        <button type="button" class="cell small-12 medium-offset-4 medium-4 button2 tabBoxButtonSubmit">Filter</button>
+        <button type="button" class="cell small-6 medium-offset-3 medium-2 button2 tabBoxButtonSubmit">Filter</button>
+        <button type="button" id="ResetToDefault" class="cell small-6 medium-offset-3 medium-2 button2">Reset To Default</button>
       </footer>
     </form>
   </div>
