--- a/src/pages/Ticketing/case.html
+++ b/src/pages/Ticketing/case.html
@@ -123,7 +123,8 @@
   <section id="involvement">
     <header class="grid-x">
       <h2 class="cell auto">Assigned Engineer(s)</h2>
-      <button type="button" style="display:none" class="buttonType2 buttonType2Add cell medium-3 text-right teamLeadControl"  data-open="involvementForm">Add Involvement</button>
+      <button type="button" style="display:none"  class="buttonType2 buttonType2Add cell medium-3 text-right teamLeadControl"  data-open="involvementForm">Add Involvement</button>
+      <button type="button" style="display:none"  class="buttonType2 buttonType2Add cell medium-3 text-right"  data-open="DeleteinvolvementForm">Delete Involvement</button>
     </header>
     <div class="threadContainer" id="taskThread">
       <div class="scrollContainer threadTask">
@@ -159,6 +160,37 @@
       </div>
     </div>
   </section>
+  <form id="DeleteinvolvementForm" class="reveal lightBg" data-reveal>
+    <header class="grid-x grid-padding-x">
+      <h3 class="cell">Delete Involvement</h3>
+      <button class="close-button" aria-label="Dismiss alert" type="button" data-close>
+      <span aria-hidden="true">&times;</span>
+      </button>
+    </header>
+    <div class="grid-x grid-padding-x">
+      <div class="cell">
+        <label>
+          Staff <span style="color:red">*</span>
+          <select id="person" name="person">
+            <option value="">-- Select Staff --</option>
+            <option value="1">Admin</option>
+            <option value="6">Li Feng</option>
+          </select>
+        </label>
+      </div>
+    </div>
+    <div class="grid-x grid-padding-x" style="display:none">
+      <div class="cell">
+        <label>
+        Task <span style="color:red">*</span>
+        <textarea id="task" name="task" placeholder="Task"></textarea>
+        </label>
+      </div>
+    </div>
+    <footer class="grid-x grid-margin-x">
+      <button type="button" id="submit" class="btn cell small-12 medium-4 medium-offset-4">Submit</button>
+    </footer>
+  </form>
   <form id="involvementForm" class="reveal lightBg" data-reveal>
     <header class="grid-x grid-padding-x">
       <h3 class="cell">New Involvement</h3>
